[tool.poetry]
name = "rolling-stone"
version = "0.1.0"
description = ""
authors = ["fedya-eremin <qwertier06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
flake8 = "3.9.0"
wemake-python-styleguide = "0.15.3"
bandit = "1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
